# HelloAzure

./: .gitignore  CMakeLists.txt  azure-pipelines.yml
include/: Hello.h
src/: CMakeLists.txt  Hello.cpp
test/: CMakeLists.txt  test.cpp
